# ReMath

./: CMakeLists.txt
include/: re_color.h  re_constants.h  re_core.h  re_mat.h  re_mat2.h  re_mat3.h  re_mat4.h  re_mat4_simd.h  re_math.h  re_math_ext.h  re_noise.h  re_quat.h  re_random.h  re_test_core.h  re_types.h  re_vec.h
tests/: re_all_tests.c  re_color_tests.c  re_core_test.c  re_mat_test.cpp  re_math_ext_test.c  re_math_test.c  re_noise_tests.c  re_quat_test.c  re_random_test.c  test_vec.cpp
